removed some unneeded references from the bibliography and started a draft of the introduction.

--- a/references.bib
+++ b/references.bib
@@ -48,15 +48,6 @@
   year={1991}
 }
 
-@incollection{lusztig92,
-  title={Introduction to quantized enveloping algebras},
-  author={Lusztig, G.},
-  booktitle={New developments in Lie theory and their applications},
-  pages={49--65},
-  year={1992},
-  publisher={Springer}
-}
-
 @article{ginzburg93,
   title={Langlands reciprocity for affine quantum groups of type A n},
   author={Ginzburg, V. and Vasserot, E.},
@@ -154,15 +145,6 @@
   year={2004}
 }
 
-@article{reineke04,
-  title={The use of geometric and quantum group techniques for wild quivers},
-  author={Reineke, M.},
-  journal={Representations of finite dimensional algebras and related topics in Lie theory and geometry},
-  volume={40},
-  pages={365--390},
-  year={2004}
-}
-
 @article{doty07,
   title={Presenting affine q-Schur algebras},
   author={Doty, S. R. and Green, R. M.},
@@ -227,7 +209,7 @@
 }
 
 @misc{su12,
-	author = {Bernt Tore Jensen and Xiuping Su},
+	author = {Bernt Tore Jensen and Xiuping},
 	title = {A geometric realisation of 0-Schur and 0-Hecke algebras},
 	year = {2012},
 	eprint = {arXiv:1207.6769}
@@ -265,49 +247,10 @@
 	eprint = {arXiv:1512.03504}
 }
 
-@article{su15,
-  title={A geometric realisation of 0-Schur and 0-Hecke algebras},
-  author={Jensen, B. T. and Su, X.},
-  journal={Journal of Pure and Applied Algebra},
-  volume={219},
-  number={2},
-  pages={277--307},
-  year={2015},
-  publisher={Elsevier}
-}
-
-@article{crawleyboevey17,
-  title={On quiver Grassmannians and orbit closures for\\
-  representation-finite algebras},
-  author={Crawley-Boevey, W. and Sauter, J.},
-  journal={Mathematische Zeitschrift},
-  volume={285},
-  number={1-2},
-  pages={367--395},
-  year={2017},
-  publisher={Springer}
-}
-
-@article{su17,
-  title={Degenerate 0-Schur algebras and Nil-Temperley-Lieb algebras},
-  author={Jensen, B. T. and Su, X. and Yang, G.},
-  journal={arXiv preprint arXiv:1705.06084},
-  year={2017}
-}
-
 @article{hu07,
 	title={The Grassmanian as a Projective Variety},
 	author={D. A. Hudec},
 	year={2007}
-}
-
-@misc{fan16,
-    title={Affine flag varieties and quantum symmetric pairs},
-    author={Zhaobing Fan and Chun-Ju Lai and Yiqiang Li and Li Luo and Weiqiang Wang},
-    year={2016},
-    eprint={1602.04383},
-    archivePrefix={arXiv},
-    primaryClass={math.RT}
 }
 
 @book{harris13,
