--- a/preamble.sty
+++ b/preamble.sty
@@ -65,21 +65,29 @@
 % -------------------------------------------- %
 % 				THEOREM ENVIRONMENTS	       %
 % -------------------------------------------- %
-
+% Plain style theorems:
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{corollary}[theorem]{Corollary}
+% Without numbering:
+\newtheorem*{theorem*}{Theorem}
+\newtheorem*{proposition*}{Proposition}
 
+% Italic style for definitions:
 \theoremstyle{definition}
 \newtheorem{definition}[theorem]{Definition}
 \newtheorem{remark}[theorem]{Remark}
 \newtheorem{example}[theorem]{Example}
 \newtheorem{conjecture}[theorem]{Conjecture}
+% Without numbering:
+\newtheorem*{definition*}{Definition}
+\newtheorem*{conjecture*}{Conjecture}
 
 \numberwithin{equation}{section}
 \numberwithin{figure}{section}
+
 
 % -------------------------------------------- %
 %			 MATHEMATICAL OPERATORS			   %
