--- a/preamble.sty
+++ b/preamble.sty
@@ -74,6 +74,7 @@
 % Without numbering:
 \newtheorem*{theorem*}{Theorem}
 \newtheorem*{proposition*}{Proposition}
+\newtheorem*{lemma*}{Lemma}
 
 % Italic style for definitions:
 \theoremstyle{definition}
